--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,11 +3,11 @@
 
     <style name="MyFoodButtonStyle" parent="Widget.AppCompat.Button.Borderless">
         <item name="textAllCaps">false</item>
-<!--        <item name="android:fontFamily">@font/sulsans</item>-->
+        <item name="android:fontFamily">@font/montserrat_font</item>
     </style>
 
     <style name="MyFoodTextViewStyle" parent="android:Widget.TextView">
-<!--        <item name="android:fontFamily">@font/sulsans</item>-->
+        <item name="android:fontFamily">@font/montserrat_font</item>
     </style>
 
     <style name="MyFoodTabLayoutTextAppearance" parent="Base.Widget.Design.TabLayout">
